Added a bunch of refinements to the Features and Factor the Model
- Add 2nd degree features wobs* and bobs*
- Split the model into three outcome based datasets to create three models

--- a/FindingElo.ipynb
+++ b/FindingElo.ipynb
@@ -173,6 +173,13 @@
     "  - skewness: this feature should tell us whether a few good moves by fluke are tipping the scale for any player.\n",
     "- In case of forfeiture, we really don't have any data to go by, and I think our best bet is to just predict the average score and hope for the best, further, the training data from forfeiture games could mess with prediction of other games, so we should take out those records from the training data and treat forfeitures completely separately.\n",
     "- In case of draws we can use the difference in number of moves between white player and black player(or total_moves%2) to decide who offered the draw, which could be significant.\n",
+    "\n",
+    "### Further Refinements to the Feature Matrix and the Model\n",
+    "I've implemented the following refinements...\n",
+    "- Added some 2nd degree features by multiplying the number of observation with the other features\n",
+    "- Split the model into three outcome based datasets (white wins, black wins, draw)\n",
+    "These two improvements(and a bug fix) combined gave a slight boost to the performance jump of around 22 percentile.\n",
+    "\n",
     "### Notes on Parsing stockfish.csv series\n",
     "For the most part stockfish data is just a series of space separated integers, so very easy to parse. But we have to take care of a couple of edge cases.\n",
     "- In forfeiture games where only white player makes one move and the black player doesn't show up or when white player doesn't show up, we get an empty series, which needs to be explicitly converted to a series of just one move.\n",
@@ -252,7 +259,9 @@
     "                = scipy.stats.describe(blackScores)\n",
     "        moveStatsList.append(scipy.array(\n",
     "                [wnobs, wmin, wmax, wmean, wvariance, wskewness, wkurtosis,\n",
+    "                 wnobs*wmin, wnobs*wmax, wnobs*wmean, wnobs*wvariance, wnobs*wskewness, wnobs*wkurtosis,\n",
     "                 bnobs, bmin, bmax, bmean, bvariance, bskewness, bkurtosis,\n",
+    "                 bnobs*bmin, bnobs*bmax, bnobs*bmean, bnobs*bvariance, bnobs*bskewness, bnobs*bkurtosis,\n",
     "                 bnobs - wnobs]))\n"
    ]
   },
@@ -274,13 +283,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature matrix shape is:  (50000, 16)\n"
+      "Feature matrix shape is:  (50000, 28)\n"
      ]
     }
    ],
    "source": [
     "moveStats = scipy.array(moveStatsList)\n",
-    "moveStats = scipy.insert(moveStats, 0, values=matchResults, axis=1)\n",
+    "moveStats = scipy.column_stack((moveStats, matchResults))\n",
     "print(\"Feature matrix shape is: \", moveStats.shape)"
    ]
   },
@@ -309,9 +318,9 @@
    "source": [
     "Future Directions for Features\n",
     "----------------------------\n",
-    "- Long hard fought matches should be more significant to guaging performance of the players so multiplying features like variance and mean with the number of moves could provide an interesting feature.\n",
+    "- Long hard fought matches should be more significant to guaging performance of the players so multiplying features like variance and mean with the number of moves could provide an interesting feature.(DONE)\n",
     "- We could in general multiply any two features and create a bunch of 2nd degree polynomials without worrying about overfitting(25000 observations) and see what sticks.\n",
-    "- Sepearating Draws and making separate models for them could make a better predictor for the games with results."
+    "- Sepearating Draws and making separate models for them could make a better predictor for the games with results.(DONE)"
    ]
   },
   {
@@ -331,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -350,17 +359,42 @@
     "trainingStatsForf = trainingStats[trainingStats[:,3]==0]\n",
     "predictionStatsReg = predictionStats[predictionStats[:,3]!=0]\n",
     "predictionStatsForf = predictionStats[predictionStats[:,3]==0]\n",
+    "\n",
+    "# Make separate models for win/lose/draws\n",
+    "trainingStatsDraws = trainingStatsReg[trainingStatsReg[:,-1]==0.5]\n",
+    "trainingStatsWins = trainingStatsReg[trainingStatsReg[:,-1]==1]\n",
+    "trainingStatsLosses = trainingStatsReg[trainingStatsReg[:,-1]==0]\n",
+    "predictionStatsDraws = predictionStatsReg[predictionStatsReg[:,-1]==0.5]\n",
+    "predictionStatsWins = predictionStatsReg[predictionStatsReg[:,-1]==1]\n",
+    "predictionStatsLosses = predictionStatsReg[predictionStatsReg[:,-1]==0]\n",
     "# Run the regular data through two linear models, one for white and one for black\n",
     "\n",
     "#from http://stackoverflow.com/questions/11479064/multivariate-linear-regression-in-python\n",
     "from sklearn import linear_model\n",
-    "whiteModel = linear_model.LinearRegression()\n",
-    "whiteModel.fit(trainingStatsReg[:,3:],trainingStatsReg[:,1])\n",
-    "blackModel = linear_model.LinearRegression()\n",
-    "blackModel.fit(trainingStatsReg[:,3:],trainingStatsReg[:,2])\n",
+    "whiteModelWins = linear_model.LinearRegression()\n",
+    "whiteModelWins.fit(trainingStatsWins[:,3:],trainingStatsWins[:,1])\n",
+    "blackModelWins = linear_model.LinearRegression()\n",
+    "blackModelWins.fit(trainingStatsWins[:,3:],trainingStatsWins[:,2])\n",
     "\n",
-    "whitePredictionsReg = whiteModel.predict(predictionStatsReg[:,1:])\n",
-    "blackPredictionsReg = blackModel.predict(predictionStatsReg[:,1:])\n",
+    "whiteModelLosses = linear_model.LinearRegression()\n",
+    "whiteModelLosses.fit(trainingStatsLosses[:,3:],trainingStatsLosses[:,1])\n",
+    "blackModelLosses = linear_model.LinearRegression()\n",
+    "blackModelLosses.fit(trainingStatsLosses[:,3:],trainingStatsLosses[:,2])\n",
+    "\n",
+    "whiteModelDraws = linear_model.LinearRegression()\n",
+    "whiteModelDraws.fit(trainingStatsDraws[:,3:],trainingStatsDraws[:,1])\n",
+    "blackModelDraws = linear_model.LinearRegression()\n",
+    "blackModelDraws.fit(trainingStatsDraws[:,3:],trainingStatsDraws[:,2])\n",
+    "\n",
+    "\n",
+    "whitePredictionsWins = whiteModelWins.predict(predictionStatsWins[:,1:])\n",
+    "blackPredictionsWins = blackModelWins.predict(predictionStatsWins[:,1:])\n",
+    "\n",
+    "whitePredictionsLosses = whiteModelLosses.predict(predictionStatsLosses[:,1:])\n",
+    "blackPredictionsLosses = blackModelLosses.predict(predictionStatsLosses[:,1:])\n",
+    "\n",
+    "whitePredictionsDraws = whiteModelDraws.predict(predictionStatsDraws[:,1:])\n",
+    "blackPredictionsDraws = blackModelDraws.predict(predictionStatsDraws[:,1:])\n",
     "\n",
     "# for forfeiture make averages of white elo and black elo for white forfeiture and\n",
     "# black forfeiture each\n",
@@ -369,10 +403,12 @@
     "\n",
     "#stitch the output together\n",
     "# Stitch index and predictions\n",
-    "predictionsReg = scipy.column_stack((predictionStatsReg[:,0],whitePredictionsReg,blackPredictionsReg))\n",
+    "predictionsWins = scipy.column_stack((predictionStatsWins[:,0],whitePredictionsWins,blackPredictionsWins))\n",
+    "predictionsLosses = scipy.column_stack((predictionStatsLosses[:,0],whitePredictionsLosses,blackPredictionsLosses))\n",
+    "predictionsDraws = scipy.column_stack((predictionStatsDraws[:,0],whitePredictionsDraws,blackPredictionsDraws))\n",
     "predictionsForf = scipy.column_stack((predictionStatsForf[:,0],whitePredictionsForf,blackPredictionsForf))\n",
     "\n",
-    "predictions = scipy.concatenate((predictionsReg, predictionsForf))\n",
+    "predictions = scipy.concatenate((predictionsWins, predictionsLosses, predictionsDraws, predictionsForf))\n",
     "predictions = scipy.around(predictions)\n",
     "predictions = predictions.astype(int)\n",
     "predictions = predictions[predictions[:,0].argsort()]\n",
@@ -389,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -398,22 +434,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[25001  2321  2333]\n",
-      " [25002  2140  2329]\n",
-      " [25003  2332  2219]\n",
-      " [25004  2305  2313]\n",
-      " [25005  2278  2287]\n",
-      " [25006  2187  2356]\n",
-      " [25007  2264  2111]\n",
-      " [25008  2310  2317]\n",
-      " [25009  2378  2233]\n",
-      " [25010  2316  2164]]\n"
+      "[[25001  2317  2333]\n",
+      " [25002  2074  2208]\n",
+      " [25003  2320  2231]\n",
+      " [25004  2334  2349]\n",
+      " [25005  2272  2305]\n",
+      " [25006  2091  2281]\n",
+      " [25007  2276  2114]\n",
+      " [25008  2350  2368]\n",
+      " [25009  2374  2230]\n",
+      " [25010  2310  2159]]\n"
      ]
     }
    ],
    "source": [
     "print(predictions[0:10])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
